Bug 336046 - [testcase] Invalid css padding declaration should not be rendered
Summary: [testcase] Invalid css padding declaration should not be rendered
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.13.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-10 14:15 UTC by Andrea Iacovitti
Modified: 2014-06-10 14:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments
self explanatory testcase (265 bytes, text/html)
2014-06-10 14:15 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2014-06-10 14:15:55 UTC
Created attachment 87105 [details]
self explanatory testcase

The following padding shorthand declaration:
padding: 20px 20px boo
is invalid, thus it should be treated the same way as 'padding: 0px'.
khtml instead applies a padding-top/padding-right of 20px.
Comment 1 Andrea Iacovitti 2014-06-10 14:46:10 UTC
Git commit bb2e6d6ebf8daf2d8fc838c5582204c7cfc3d1a6 by Andrea Iacovitti.
Committed on 10/06/2014 at 14:34.
Pushed by aiacovitti into branch 'KDE/4.13'.

Remove subproperties previously added by parseValue() to our 'parsedProperties'
if the shorthand is invalid.
FIXED-IN: 4.13.3

M  +23   -4    khtml/css/cssparser.cpp
M  +1    -0    khtml/css/cssparser.h

http://commits.kde.org/kdelibs/bb2e6d6ebf8daf2d8fc838c5582204c7cfc3d1a6