Remove subproperties previously added by parseValue() to our 'parsedProperties' if the shorthand is invalid.

BUG: 336046
FIXED-IN: 4.13.3