khtml/css/cssparser.h
@@ -134,6 +134,7 @@ namespace DOM {
 	unsigned int defaultNamespace();
 
 	void addProperty( int propId, CSSValueImpl *value, bool important );
+        void rollbackParsedProperties(int toNumParsedProperties);
 	bool hasProperties() const { return numParsedProperties > 0; }
 	CSSStyleDeclarationImpl *createStyleDeclaration( CSSStyleRuleImpl *rule );
 	CSSStyleDeclarationImpl *createFontFaceStyleDeclaration( CSSFontFaceRuleImpl *rule );
